--- a/client/src/Components/Calendar/Calendar.css
+++ b/client/src/Components/Calendar/Calendar.css
@@ -1,11 +1,12 @@
 .table {
   margin: 0 auto 3px;
   border-radius: .2rem;
-  background-color: #0a4470;
+  background-color: #073050;
   height: 55px;
   width: 350px;
   align-items: center;
   padding: .3rem;
+  box-shadow: 0 0 10px 2px rgba(51, 51, 51, 0.456);
 }
 
 table td:not([align]),
@@ -64,5 +65,6 @@ a {
   margin: 0 auto 3px;
   width: 350px;
   border-radius: .2rem;
+  box-shadow: 0 0 10px 2px rgba(51, 51, 51, 0.456);
   background-color: #073050;
 }
